--- a/Project EDA/Project EDA.vcxproj.filters
+++ b/Project EDA/Project EDA.vcxproj.filters
@@ -46,8 +46,9 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="accounts1.txt">
+    <Text Include="accounts.txt">
       <Filter>Arquivos de Recurso</Filter>
     </Text>
+    <Text Include="transports.txt" />
   </ItemGroup>
 </Project>
